--- a/app/src/main/res/layout/location_activity_detail.xml
+++ b/app/src/main/res/layout/location_activity_detail.xml
@@ -55,7 +55,6 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/name_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
@@ -66,7 +65,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/name_title_info"
+                    android:id="@+id/location_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -75,7 +74,6 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
@@ -86,7 +84,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/date_info"
+                    android:id="@+id/location_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -96,7 +94,6 @@
                     android:textSize="18sp"/>
 
                 <TextView
-                    android:id="@+id/name_longitude"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_bold"
@@ -107,7 +104,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/longitude_info"
+                    android:id="@+id/location_longitude"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -116,7 +113,6 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/name_latitude"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_bold"
@@ -126,7 +122,7 @@
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/latitude_info"
+                    android:id="@+id/location_latitude"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_medium"
@@ -141,7 +137,6 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
@@ -152,7 +147,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/description_info"
+                    android:id="@+id/location_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_medium"
@@ -178,7 +173,6 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/photos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_bold"
@@ -188,12 +182,12 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/see_all_reviews"
+                    android:id="@+id/location_reviews_see_all"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/nunito_bold"
-                    android:gravity="end|bottom"
+                    android:gravity="end|center"
                     android:text="See all"
                     android:textColor="@color/lightgreen"
                     android:textSize="16sp"
@@ -212,18 +206,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/reviews"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_bold"
-                android:text="@string/reviews"
-                android:textColor="@color/darkgrey"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text="@string/reviews"
+                    android:textColor="@color/darkgrey"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/location_photos_see_all"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/nunito_bold"
+                    android:gravity="end|center"
+                    android:text="See all"
+                    android:textColor="@color/lightgreen"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:clickable="true"/>
+
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/location_reviews"
