--- a/app/src/main/res/layout/location_edit_review_acitivity.xml
+++ b/app/src/main/res/layout/location_edit_review_acitivity.xml
@@ -57,7 +57,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/add_a_new_location_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -74,11 +73,11 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/title_name"
+                    android:id="@+id/review_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:layout_weight="2.1"
+                    android:layout_weight="2"
                     android:fontFamily="@font/nunito_bold"
                     android:text="Title"
                     android:textColor="@color/darkgrey"
@@ -86,7 +85,6 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/rating_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -105,7 +103,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/title_edit_text"
+                    android:id="@+id/review_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -114,6 +112,7 @@
                     android:paddingRight="15dp"
                     android:paddingBottom="10dp"
                     android:paddingLeft="15dp"
+                    android:layout_marginRight="10dp"
                     app:cornerRadius="10dp"
                     android:hint="TITLE"
                     android:textSize="20sp"
@@ -122,13 +121,8 @@
                     android:textColor="@color/black"
                     android:inputType="textCapSentences|textAutoCorrect"/>
 
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.1"/>
-
                 <EditText
-                    android:id="@+id/rating_edit_text"
+                    android:id="@+id/review_rating"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -150,7 +144,6 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/description_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -161,7 +154,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/description_name_edit_text"
+                android:id="@+id/review_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -202,7 +195,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/cancel_button"
+                    android:id="@+id/review_cancel_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -225,7 +218,7 @@
                     android:layout_weight="0.1"/>
 
                 <Button
-                    android:id="@+id/send_button"
+                    android:id="@+id/review_send_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -237,7 +230,7 @@
                     android:paddingTop="5dp"
                     android:paddingRight="30dp"
                     android:paddingBottom="5dp"
-                    android:text="SEND"
+                    android:text="ADD"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     app:cornerRadius="10dp" />
