--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -48,7 +48,6 @@
                 android:layout_marginRight="10dp">
 
                 <TextView
-                    android:id="@+id/name_longitude"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/raleway_bold"
@@ -57,7 +56,7 @@
                     android:textColor="@color/white" />
 
                 <TextView
-                    android:id="@+id/longitude"
+                    android:id="@+id/location_longitude"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -72,7 +71,6 @@
                 android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/name_num_of_reviews"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/raleway_bold"
@@ -80,7 +78,7 @@
                     android:textColor="@color/white" />
 
                 <TextView
-                    android:id="@+id/num_of_reviews"
+                    android:id="@+id/location_num_of_reviews"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -103,7 +101,6 @@
                 android:layout_marginRight="10dp">
 
                 <TextView
-                    android:id="@+id/name_latitude"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/raleway_bold"
@@ -112,7 +109,7 @@
                     android:textColor="@color/white" />
 
                 <TextView
-                    android:id="@+id/latitude"
+                    android:id="@+id/location_latitude"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -126,7 +123,6 @@
                 android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/name_num_of_photos"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/raleway_bold"
@@ -134,7 +130,7 @@
                     android:textColor="@color/white" />
 
                 <TextView
-                    android:id="@+id/num_of_photos"
+                    android:id="@+id/location_num_of_photos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
