--- a/app/src/main/res/layout/map_created_location.xml
+++ b/app/src/main/res/layout/map_created_location.xml
@@ -9,7 +9,6 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/display_title_map_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -25,7 +24,6 @@
         android:textStyle="bold" />
 
     <View
-        android:id="@+id/shadow"
         android:layout_width="wrap_content"
         android:layout_height="3dp"
         android:background="@drawable/shadow"/>
@@ -38,13 +36,11 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/upper_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/add_a_new_location_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -56,7 +52,6 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/title_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -67,7 +62,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/title_name_edit_text"
+                    android:id="@+id/location_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -84,7 +79,6 @@
                     android:inputType="textCapSentences|textAutoCorrect"/>
 
                 <TextView
-                    android:id="@+id/description_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -95,7 +89,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/description_name_edit_text"
+                    android:id="@+id/location_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -127,7 +121,6 @@
                     android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/longitude_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="15dp"
@@ -138,7 +131,7 @@
                             android:textStyle="bold" />
 
                         <EditText
-                            android:id="@+id/longitude_edit_text"
+                            android:id="@+id/location_longitude"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
@@ -150,17 +143,12 @@
                             android:paddingTop="10dp"
                             android:paddingRight="15dp"
                             android:paddingBottom="10dp"
+                            android:layout_marginRight="10dp"
                             android:textColor="@color/black"
                             android:textSize="20sp"
                             app:cornerRadius="10dp" />
 
                 </LinearLayout>
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.4"/>
-
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -169,7 +157,6 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/latitude_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
@@ -180,7 +167,7 @@
                         android:textStyle="bold" />
 
                     <EditText
-                        android:id="@+id/latitude_edit_text"
+                        android:id="@+id/location_latitude"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -192,6 +179,7 @@
                         android:paddingTop="10dp"
                         android:paddingRight="15dp"
                         android:paddingBottom="10dp"
+                        android:layout_marginLeft="10dp"
                         android:textColor="@color/black"
                         android:textSize="20sp"
                         app:cornerRadius="10dp" />
@@ -214,7 +202,6 @@
                 android:layout_gravity="bottom">
 
                 <TextView
-                    android:id="@+id/added_photos_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -225,7 +212,7 @@
                     android:textStyle="bold" />
 
                 <View
-                    android:id="@+id/add_photo_view"
+                    android:id="@+id/location_add_photo"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_marginTop="15dp"
@@ -245,7 +232,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/cancel_button"
+                        android:id="@+id/location_cancel_button"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -268,7 +255,7 @@
                         android:layout_weight="0.1"/>
 
                     <Button
-                        android:id="@+id/save_button"
+                        android:id="@+id/location_add_button"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
