--- a/app/src/main/res/layout/trip_list_item.xml
+++ b/app/src/main/res/layout/trip_list_item.xml
@@ -43,7 +43,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/name_date"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/raleway_bold"
@@ -52,7 +51,7 @@
                 android:textColor="@color/white" />
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/trip_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -69,7 +68,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/name_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/raleway_bold"
@@ -77,7 +75,7 @@
                 android:textColor="@color/white" />
 
             <TextView
-                android:id="@+id/distance"
+                android:id="@+id/trip_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -93,7 +91,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/name_numOfLocations"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/raleway_bold"
@@ -101,7 +98,7 @@
                 android:textColor="@color/white" />
 
             <TextView
-                android:id="@+id/numOfLocations"
+                android:id="@+id/trip_num_of_locations"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
