--- a/app/src/main/res/layout/location_edit_review_acitivity.xml
+++ b/app/src/main/res/layout/location_edit_review_acitivity.xml
@@ -73,7 +73,6 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/review_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -127,18 +126,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
+                    android:background="@drawable/add_new_location_edit_text_border"
+                    android:fontFamily="@font/nunito_medium"
+                    android:hint=" / 5"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:paddingLeft="15dp"
                     android:paddingTop="10dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="10dp"
-                    android:paddingLeft="15dp"
-                    app:cornerRadius="10dp"
-                    android:hint=" / 5"
-                    android:maxLength="1"
-                    android:textSize="20sp"
-                    android:fontFamily="@font/nunito_medium"
-                    android:background="@drawable/add_new_location_edit_text_border"
                     android:textColor="@color/black"
-                    android:inputType="number"/>
+                    android:textSize="20sp"
+                    app:cornerRadius="10dp" />
 
 
             </LinearLayout>
