--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/location_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="15dp"
@@ -10,9 +9,9 @@
     android:clickable="true">
 
     <LinearLayout
-        android:id="@+id/trip_details"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:orientation="vertical">
 
         <LinearLayout
