--- a/app/src/main/res/layout/trip_list_item.xml
+++ b/app/src/main/res/layout/trip_list_item.xml
@@ -9,7 +9,7 @@
     android:clickable="true">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="10dp"
@@ -17,21 +17,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="25dp"
             android:layout_marginBottom="8dp"
-            android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/trip_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/raleway_bold"
                 android:gravity="start"
+                android:padding="0dp"
                 android:textColor="@color/white"
-                android:textSize="15sp"
-                android:paddingBottom="0dp"/>
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -108,29 +107,6 @@
 
     </LinearLayout>
 
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <FrameLayout
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/image_bg"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="top|end"
-            android:background="@drawable/joe2"/>
-        <ImageView
-            android:id="@+id/image_item"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="bottom|start"/>
-    </FrameLayout>
-
     <View
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -139,6 +115,7 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="match_parent"
+        android:layout_gravity="center|end"
         android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
 
 </LinearLayout>
