--- a/app/src/main/res/layout/weather_widget.xml
+++ b/app/src/main/res/layout/weather_widget.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/weather_widget"
         android:layout_width="95dp"
         android:layout_height="130dp"
         android:background="@drawable/main_weather_border"
         android:orientation="vertical"
+    android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
