--- a/app/src/main/res/layout/map_created_location.xml
+++ b/app/src/main/res/layout/map_created_location.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/location_title"
+        android:id="@+id/trip_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -63,7 +63,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/location_name"
+                    android:id="@+id/location_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
