Migrated the map to MapCreatedActivity. Live refreshing not working fully

--- a/app/src/main/res/layout/map_created_trip.xml
+++ b/app/src/main/res/layout/map_created_trip.xml
@@ -36,12 +36,12 @@
                 android:textStyle="bold" />
             <TextView
                 android:id="@+id/display_temperature"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="end"
-                android:text="Temperature"
+                android:layout_gravity="end"
+                android:text="@string/temperature"
                 android:textAlignment="textStart"
                 android:textColor="@color/darkgrey"
                 android:textSize="20sp"
