--- a/app/src/main/res/layout/map_created_trip.xml
+++ b/app/src/main/res/layout/map_created_trip.xml
@@ -106,6 +106,7 @@
             android:text="Stop"
             android:textSize="16sp"
             app:cornerRadius="8dp"
+            android:visibility="gone"
             app:icon="@drawable/ic_baseline_location_disabled_24" />
     </LinearLayout>
 
