--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/location_big_label"
+        android:id="@+id/map_big_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/lightgreen"
@@ -22,20 +22,20 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <View
-        android:id="@+id/location_sub_label"
+        android:id="@+id/map_sub_label"
         android:layout_width="wrap_content"
         android:layout_height="5dp"
         android:background="@color/darkgreen"
-        app:layout_constraintTop_toBottomOf="@+id/location_big_label"
+        app:layout_constraintTop_toBottomOf="@+id/map_big_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <View
-        android:id="@+id/location_sub_sub_label"
+        android:id="@+id/map_sub_sub_label"
         android:layout_width="wrap_content"
         android:layout_height="3dp"
         android:background="@drawable/shadow"
-        app:layout_constraintTop_toBottomOf="@+id/location_sub_label"
+        app:layout_constraintTop_toBottomOf="@+id/map_sub_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -46,14 +46,14 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:elevation="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/location_sub_sub_label"
+        app:layout_constraintTop_toBottomOf="@+id/map_sub_sub_label"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <include
         layout="@layout/home_activity"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/location_sub_sub_label"
+        app:layout_constraintTop_toBottomOf="@+id/map_sub_sub_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
