--- a/app/src/main/res/layout/trips_activity.xml
+++ b/app/src/main/res/layout/trips_activity.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.TripsFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/trip_big_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/lightgreen"
@@ -17,21 +18,32 @@
         android:text="@string/heading_past_trips"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <View
+        android:id="@+id/trip_sub_label"
         android:layout_width="wrap_content"
         android:layout_height="5dp"
         android:background="@color/darkgreen"
-        android:translationY="60dp"/>
+        app:layout_constraintTop_toBottomOf="@id/trip_big_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <View
+        android:id="@+id/trip_sub_sub_label"
         android:layout_width="wrap_content"
         android:layout_height="3dp"
         android:background="@drawable/shadow"
-        android:translationY="65dp" />
+        app:layout_constraintTop_toBottomOf="@id/trip_sub_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <include
-        layout="@layout/trips_content" />
+    <include layout="@layout/trips_content"
+        app:layout_constraintTop_toBottomOf="@id/trip_sub_sub_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
