--- a/app/src/main/res/layout/trips_content.xml
+++ b/app/src/main/res/layout/trips_content.xml
@@ -13,6 +13,21 @@
         android:id="@+id/filter_bar"
         layout="@layout/trips_sort_bar" />
 
+    <TextView
+        android:id="@+id/no_trips"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_trips"
+        android:fontFamily="@font/raleway_medium"
+        android:textColor="@color/lightgrey"
+        android:textStyle="italic"
+        android:textSize="30sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/filter_bar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/trips_list"
         android:layout_width="wrap_content"
