--- a/app/src/main/res/layout/location_reviews_activity.xml
+++ b/app/src/main/res/layout/location_reviews_activity.xml
@@ -99,6 +99,7 @@
             android:textColor="@color/lightgrey"
             android:textStyle="italic"
             android:textSize="20sp"
+            android:visibility="gone"
             android:layout_gravity="center"
             android:gravity="center_vertical"/>
 
