added position and renamed the recyclerview in all locations reviews

--- a/app/src/main/res/layout/location_reviews_activity.xml
+++ b/app/src/main/res/layout/location_reviews_activity.xml
@@ -104,7 +104,7 @@
             android:gravity="center_vertical"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/reviews_item"
+            android:id="@+id/location_reviews"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
