Styled and displayed a list of 2 most recent reviews

--- a/app/src/main/res/layout/location_reviews_activity.xml
+++ b/app/src/main/res/layout/location_reviews_activity.xml
@@ -106,6 +106,6 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/location_reviews"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
