--- a/app/src/main/res/layout/location_review_list_item.xml
+++ b/app/src/main/res/layout/location_review_list_item.xml
@@ -3,92 +3,91 @@
     android:id="@+id/location_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
-    android:padding="20dp"
-    android:orientation="horizontal">
+    android:layout_marginBottom="20dp"
+    android:background="@drawable/rounded_corners_white_background"
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginBottom="8dp"
+        android:gravity="start"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/review_title"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/nunito_bold"
+                android:gravity="center|start"
+                android:text="@string/title_of_review"
+                android:textColor="@color/darkgreen"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/review_title"
-                    android:layout_width="0dp"
+                    android:id="@+id/name_rating"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/raleway_bold"
-                    android:gravity="center|start"
-                    android:text="@string/title_of_review"
-                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text="@string/rating"
                     android:textColor="@color/darkgreen"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_weight="1"
-                    android:gravity="end">
-
-                    <TextView
-                        android:id="@+id/name_rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/raleway_medium"
-                        android:text="@string/rating"
-                        android:textStyle="bold"
-                        android:textColor="@color/darkgreen"
-                        android:textSize="18sp"/>
-
-                    <TextView
-                        android:id="@+id/review_rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="5dp"
-                        android:fontFamily="@font/raleway_medium"
-                        android:text="@string/_3_5"
-                        android:textStyle="bold"
-                        android:textColor="@color/lightgreen"
-                        android:textSize="18sp"/>
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/review_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginRight="5dp"
+                    android:fontFamily="@font/nunito_medium"
+                    android:textColor="@color/lightgreen"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/nunito_medium"
+                    android:text="@string/out_of_5"
+                    android:textColor="@color/lightgreen"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/review_description"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/raleway_bold"
-                android:gravity="start"
-                android:paddingBottom="0dp"
-                android:text="@string/description_detail"
-                android:textColor="@color/black"
-                android:textSize="18sp"/>
-
-        </LinearLayout>
-
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/review_description"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/raleway_medium"
+            android:gravity="start"
+            android:paddingBottom="0dp"
+            android:text="@string/description_detail"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 </LinearLayout>
